# yt-observer

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  package-lock.json  package.json  styles.scss  tsconfig.json  vite.config.ts
src/: App.tsx  Layout.tsx  Router.tsx  app.rs  main.rs  page.rs  route.rs
src-tauri/: Cargo.toml  tauri.conf.json
